@@ -8,6 +8,6 @@
   "factorio_version": "1.1",
   "dependencies": [
     "base >= 1.1.0",
-    "enemyracemanager >= 1.7.0"
+    "enemyracemanager >= 1.9.0"
   ]
 }
