@@ -101,6 +101,7 @@ function ErmZerg.make_hydralisk(level)
                 type = "projectile",
                 ammo_category = 'biological',
                 range = attack_range,
+                min_attack_distance = attack_range - 3,
                 cooldown = ERM_UnitHelper.get_attack_speed(base_attack_speed, incremental_attack_speed, attack_speed_multiplier, level),
                 cooldown_deviation = 0.1,
                 warmup = 12,
