@@ -51,7 +51,7 @@ local attack_range = ERM_Config.get_max_attack_range()
 
 local movement_multiplier = settings.startup["enemyracemanager-level-multipliers"].value
 local base_movement_speed = 0.15
-local incremental_movement_speed = 0.1
+local incremental_movement_speed = 0.125
 
 -- Misc settings
 local vision_distance = 35
@@ -103,6 +103,7 @@ function ErmZerg.make_queen(level)
             attack_parameters = {
                 type = "projectile",
                 range = attack_range,
+                min_attack_distance = attack_range - 4,
                 cooldown = ERM_UnitHelper.get_attack_speed(base_attack_speed, incremental_attack_speed, attack_speed_multiplier, level) - 30,
                 cooldown_deviation = 0.1,
                 warmup = 6,
